--- a/HW2/hw2.tex
+++ b/HW2/hw2.tex
@@ -427,6 +427,38 @@ Note: matrices $\mathbf{Q}$ and $\mathbf{R}$ must be square matrices.
 -1 & -1 & 1\\	
 1 & 1 & -1
 \end{bmatrix}$
+\begin{flalign*}
+\mathbf{u}_1 &= (-1, -1, 1) & \\
+\mathbf{q}_1 &= \frac{\mathbf{u}_1}{\|\mathbf{u}_1\|} = \frac{(-1, -1, 1)}{\sqrt{(-1)^2 + (-1)^2 + 1^2}} = \frac{(-1, -1, 1)}{\sqrt{3}} = \left( \frac{-1}{\sqrt{3}}, \frac{-1}{\sqrt{3}}, \frac{1}{\sqrt{3}} \right) & \\
+\mathbf{u}_2 &= (1, -1, 1) - \text{proj}_{\mathbf{q}_1} (1, -1, 1) = (1, -1, 1) - \left( (1, -1, 1) \cdot \mathbf{q}_1 \right) \mathbf{q}_1 & \\
+&= (1, -1, 1) - \left( \frac{1 \cdot (-1)}{\sqrt{3}} + \frac{-1 \cdot (-1)}{\sqrt{3}} + \frac{1 \cdot 1}{\sqrt{3}} \right) \frac{(-1, -1, 1)}{\sqrt{3}} = (1, -1, 1) - \frac{1}{3} (-1, -1, 1) & \\
+&= \left( 1 + \frac{1}{3}, -1 + \frac{1}{3}, 1 - \frac{1}{3} \right) = \left( \frac{4}{3}, \frac{-2}{3}, \frac{2}{3} \right) & \\
+\mathbf{q}_2 &= \frac{\mathbf{u}_2}{\|\mathbf{u}_2\|} = \frac{\left( \frac{4}{3}, \frac{-2}{3}, \frac{2}{3} \right)}{\sqrt{\left( \frac{4}{3} \right)^2 + \left( \frac{-2}{3} \right)^2 + \left( \frac{2}{3} \right)^2}} = \frac{(4, -2, 2)}{\sqrt{4^2 + (-2)^2 + 2^2}} \\
+&= \left( \frac{4}{\sqrt{24}}, \frac{-2}{\sqrt{24}}, \frac{2}{\sqrt{24}} \right) = \left( \frac{2}{\sqrt{6}}, \frac{-1}{\sqrt{6}}, \frac{1}{\sqrt{6}} \right) & \\
+\end{flalign*}
+Note that $\mathbf{R}_3 = -1 \cdot \mathbf{R}_2$, making $\mathbf{A}$ rank deficient. Thus, $\mathbf{q}_3$ must be a vector orthogonal to both $\mathbf{q}_1$ and $\mathbf{q}_2$. We can use the cross product to find such a vector:
+\[\mathbf{q}_3 = \mathbf{q}_1 \times \mathbf{q}_2 = \begin{vmatrix}
+\mathbf{i} & \mathbf{j} & \mathbf{k} \\
+\frac{-1}{\sqrt{3}} & \frac{-1}{\sqrt{3}} & \frac{1}{\sqrt{3}} \\
+\frac{2}{\sqrt{6}} & \frac{-1}{\sqrt{6}} & \frac{1}{\sqrt{6}}
+\end{vmatrix} = \mathbf{i} \left(\frac{-1}{\sqrt{3}} \cdot \frac{1}{\sqrt{6}} - \frac{1}{\sqrt{3}} \cdot \frac{1}{\sqrt{6}}\right) - \mathbf{j} \left(\frac{-1}{\sqrt{3}} \cdot \frac{1}{\sqrt{6}} - \frac{1}{\sqrt{3}} \cdot \frac{2}{\sqrt{6}}\right)\]
+\[ + \mathbf{k} \left(\frac{-1}{\sqrt{3}} \cdot \frac{-1}{\sqrt{6}} - \frac{-1}{\sqrt{3}} \cdot \frac{2}{\sqrt{6}}\right) = \left( 0, \frac{3}{\sqrt{18}}, \frac{3}{\sqrt{18}} \right) = \left(0, \frac{1}{\sqrt{2}}, \frac{1}{\sqrt{2}}\right)\]
+Thus:
+\[Q = \begin{bmatrix}
+\frac{-1}{\sqrt{3}} & \frac{2}{\sqrt{6}} & 0 \\
+\frac{-1}{\sqrt{3}} & \frac{-1}{\sqrt{6}} & \frac{1}{\sqrt{2}} \\
+\frac{1}{\sqrt{3}} & \frac{1}{\sqrt{6}} & \frac{1}{\sqrt{2}}
+\end{bmatrix}\]
+\[R = \begin{bmatrix}
+(-1)(\frac{-1}{\sqrt{3}}) + (-1)(\frac{-1}{\sqrt{3}}) + 1(\frac{1}{\sqrt{3}}) & 1(\frac{-1}{\sqrt{3}}) + (-1)(\frac{-1}{\sqrt{3}}) + 1(\frac{1}{\sqrt{3}}) & 1(\frac{-1}{\sqrt{3}}) + 1(\frac{-1}{\sqrt{3}}) + (-1)(\frac{1}{\sqrt{3}}) \\
+0 & 1(\frac{2}{\sqrt{6}}) + (-1)(\frac{-1}{\sqrt{6}}) + 1(\frac{1}{\sqrt{6}}) & 1(\frac{2}{\sqrt{6}}) + 1(\frac{-1}{\sqrt{6}}) + (-1)(\frac{1}{\sqrt{6}}) \\
+0 & 0 & 1(0) + 1(\frac{1}{\sqrt{2}}) + (-1)(\frac{1}{\sqrt{2}})
+\end{bmatrix}\]
+\[R = \begin{bmatrix}
+\sqrt{3} & \frac{1}{\sqrt{3}} & \frac{-3}{\sqrt{3}} \\
+0 & \frac{4}{\sqrt{6}} & 0 \\
+0 & 0 & 0
+\end{bmatrix}\]
 	\item $\mathbf{B} = \begin{bmatrix}
 -1 & -1 & -1\\
 1 & 1 & 1\\
