--- a/HW4/HW4.tex
+++ b/HW4/HW4.tex
@@ -19,6 +19,7 @@
 \usepackage{eucal}
 \usepackage{hyperref}
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
+\usepackage{pdfpages}
 \pagestyle{empty}
 \DeclareMathOperator{\tr}{Tr}
 \newcommand*{\op}[1]{\check{\mathbf#1}}
@@ -366,4 +367,7 @@ Typewrite the solution for parts (a) to (d) in latex and code the solution to (e
   \end{enumerate}
 \end{enumerate}
 \end{enumerate}
+
+\includepdf[pages=-]{HW4_collab.pdf}
+
 \end{document}
